JAR README rectification